TODO:
- AssertStrEmpty and AssertStrNonEmpty suck.  Clean them up?
- Make a homepage for it, replace the URL in the readme file.
- Add routine to parse cmdline args.
  --test will initiate unit testing (optional arg).
     --list lists unit tests,
	 --skip or --run to select tests to run,
	 --verbose to dump a lot of info?  Maybe no need for this one.
	 --brittle to exit on the first failure and not try further tests.
 * TODO: print test results, test suites, etc as they run.
 *    Add a quiet flag that will suppress printing unless a test fails.
 *    quiet=0, full printing
 *    quiet=1, test results not printed
 *    quiet=2, suite results not printed
 *    quiet=3, summary not printed.
- Add some functional tests to check the command line arguments.
- Make sure to try compiling with gcc set to pedantic C99 as well.
- Don't malloc on every test and assert.  Keep a cache or something.
- combine some of these stupid tiny files.
- Add support for the NOTESTS macro.
- Make localizable by allowing CTBECAUSE to be redefined
  And also remove "is" and "and" from test macros.
- Make tests check for signals.  int/fp /0 and bus errors.
- Create a prefs structure instead of just having globals scattered everywhere.
- Add the ability to temporarily disable tests but leave them in the test deck.
- Add ability to specify an optional timeout.
- There's got to be a better API than show_inversions
- Make ctest's asserts behave more like regular asserts when used outside
  a ctest_start block.
- Add the ability to fork before each test.  It's a pretty useless feature
  but some guys seem pretty hot about this.
- Can I get rid of nesting asserts?  That would make things simpler.
- It's lame that I need to declare the test function and start the test
  separately.  Make a macro so I can just cunit_test(ints) { ... }
- Fix ctest_show_failures, so gross

Version 0.8, IN PROGRESS
- Renamed mutest to ctest.  A generic name is better than a lame one.