@@ -23,11 +23,12 @@
 
 void ctest_run_unit_tests()
 {
-	// Ensure that we can hit asserts without first calling ctest_start.
+	/* Ensure that we can hit asserts without first calling ctest_start. */
 	AssertEQ(1,1);
 
-	// TODO: write a test to fork and make sure that a failing
-	// assert causes the app to exit immediately.
+	/* TODO: write a test to fork and make sure that a failing
+	 * assert causes the app to exit immediately.
+	 */
 
 	ctest_test_asserts();
 }
